Dice command and match length added